--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary true
+
+        // used by Room, to test migrations
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
         signingConfig signingConfigs.release
     }
     buildTypes {
@@ -68,6 +75,14 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
+    // RxJava 2
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    // Room
+    def room_version = "1.1.1"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
     // Dagger 2
     def dagger_version = "2.16"
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -82,8 +97,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     testImplementation 'org.mockito:mockito-core:2.23.0'
-    testImplementation 'org.powermock:powermock-api-mockito2:1.7.1'
-    testImplementation 'org.powermock:powermock-module-junit4:1.7.1'
     testImplementation "androidx.arch.core:core-testing:2.0.0"
 
 
