--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,5 +35,11 @@
             android:label=""
             android:parentActivityName=".activity.BookVolumeListActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".activity.BookImageActivity"
+            android:label=""
+            android:parentActivityName=".activity.BookImageListActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 </manifest>
