--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'deploygate'
 
 // Create a variable called keystorePropertiesFile, and initialize it to your
 // keystore.properties file, in the rootProject folder.
@@ -104,8 +103,11 @@ dependencies {
     implementation "com.jakewharton.timber:timber:4.7.1"
 
 
+    // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
-
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.1.0'
+    // Optional -- Mockito framework
     testImplementation 'org.mockito:mockito-core:2.23.0'
     testImplementation "androidx.arch.core:core-testing:2.0.0"
 
